# CounterMachine

./: CMakeLists.txt  CounterMachine.sln  README.md  fibo.cm  pow2.cm
ConsoleApp/: ConsoleApp.vcxproj  main.cpp
CounterMachine/: CounterMachine.vcxproj  CounterMachine.vcxproj.filters
CounterMachine/Source/Descriptors/: Computation.cpp  Computation.h  Instruction.h
CounterMachine/Source/Execution/: Computation.cpp  Computation.h  Instruction.h  State.cpp  State.h
CounterMachine/Source/Processing/: ArgParser.cpp  ArgParser.h  ComputationBuilder.cpp  ComputationBuilder.h  ExecutionBuilder.cpp  ExecutionBuilder.h  InputParser.cpp  InputParser.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ParserBase.h  Symbol.h
CounterMachine/Source/Shared/: BoostIncludes.h  Constants.h  Exceptions.h  Utility.h
CounterMachine/Source/Transformation/: MachineTransformer.cpp  MachineTransformer.h  TransformationRuleService.h  TransformationRules.cpp  TransformationRules.h  TransformedComputation.cpp  TransformedComputation.h
QtApplication/: ComputationHolder.cpp  ComputationHolder.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  QtApplication.pro  main.cpp
UnitTest/: ErrorMessages.cpp  InstructionTest.cpp  LexerTest.cpp  ParserTest.cpp  Set1Test.cpp  Set2Test.cpp  Set3Test.cpp  TestUtils.cpp  TestUtils.h  TransformationTestUtils.cpp  TransformationTestUtils.h  UnitTest.vcxproj  UnitTest.vcxproj.filters
build-QtApplication-Desktop_Qt_5_9_3_MSVC2015_32bit-Debug/debug/: moc_Model.cpp
build-QtApplication-Desktop_Qt_5_9_3_MSVC2017_64bit-Debug/: ui_MainWindow.h
build-QtApplication-Desktop_Qt_5_9_3_MSVC2017_64bit-Debug/debug/: moc_MainWindow.cpp
